# inkMLLibcpp

./: .gitignore  CMakeLists.txt  Doxyfile  ReadMe.txt
include/inkmllib/: Channel.h  Context.h  Definitions.h  Ink.h  InkMLParser.h  InkSource.h  Trace.h  TraceFormat.h  Utility.h
libtinyxml/: CMakeLists.txt
libtinyxml/.svn/: all-wcprops  entries
sample_test/: formulaire001-equation001.inkml  sample_test.cpp
src/: .gitignore  Channel.cpp  Ink.cpp  InkMLParser.cpp  Trace.cpp  TraceFormat.cpp  Utility.cpp
